# 3D_City_Designer

./: .gitignore  ASSIGNMENT_README.md  CHECKLIST.md  CMakeLists.txt  FEATURES_SUMMARY.md  FILE_LIST.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_GUIDE.md  README.md  STRUCTURE.md  TUTORIAL.md  build.ps1  download_dependencies.ps1  generate_textures.py  setup.ps1  test.cpp
assets/: .gitkeep
include/: README.md
libs/glad/: README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: tex_frag.glsl
src/: citygenerator.cpp  citygenerator.h  main.cpp  renderer2d.cpp  renderer2d.h  renderer3d.cpp  renderer3d.h  shader.cpp  shader.h  textrenderer.cpp  textrenderer.h  texture.cpp  texture.h
